Fix bugs on mobile.

--- a/src/styles/blocks/_animals.sass
+++ b/src/styles/blocks/_animals.sass
@@ -24,6 +24,16 @@ section.animals
   .owl-carousel
     +outer-offset(margin-bottom)
 
+    &.even
+      margin-left: -20px
+      margin-right: -20px
+      width: calc(100% + 40px)
+
+      +small
+        margin-left: 0
+        margin-right: 0
+        width: auto 
+
     .owl-stage
       height: 300px
 
