--- a/src/styles/blocks/_slider.sass
+++ b/src/styles/blocks/_slider.sass
@@ -127,6 +127,7 @@ section.booking
     border-radius: $borderRadius
 
   .znms-widget__module-form-block
+    z-index: unset
     padding: 0
     background: unset
 
